--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Backend for me-app in course jsramverk",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "pretest": "bash db/reset_test_db.bash",
+    "test": "nyc --reporter=html --reporter=text --reporter=clover mocha 'test/**/*.js' --timeout 5000",
     "start": "nodemon app.js",
-    "production": "NODE_ENV='production' node app.js"
+    "production": "NODE_ENV='production' node app.js",
+    "eslint": "eslint ."
   },
   "author": "",
   "license": "ISC",
@@ -18,5 +20,13 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "sqlite3": "^5.0.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "eslint": "^7.9.0",
+    "javascript-style-guide": "^1.0.1",
+    "mocha": "^8.1.3",
+    "nyc": "^15.1.0"
   }
 }
