--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "pretest": "bash db/reset_test_db.bash",
-    "test": "nyc --reporter=html --reporter=text --reporter=clover mocha 'test/**/*.js' --timeout 5000",
+    "test": "export JWT_SECRET='longAndRandomString1435#67%976hdjdjkSDFj£dj)djdj'&& nyc --reporter=html --reporter=text --reporter=clover mocha 'test/**/*.js' --timeout 5000",
     "start": "nodemon app.js",
     "production": "NODE_ENV='production' node app.js",
     "eslint": "eslint ."
